Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/SupplyLineItem__c.object-meta.xml
<CustomObject>
    <label>SupplyLineItem</label>
    <nameField>
        <displayFormat>SupplyItem-{0000000000}</displayFormat>
        <label>SupplyLineItem Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupplyLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>