Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SupplyLineItems</relationshipLabel>
    <relationshipName>SupplyLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>