Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/ORC_Markup__c.field-meta.xml
<CustomField>
    <fullName>ORC_Markup__c</fullName>
    <label>ORC/Markup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>