Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/ORC_Status__c.field-meta.xml
<CustomField>
    <fullName>ORC_Status__c</fullName>
    <label>ORC Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Received</fullName>
            </value>
            <value>
                <fullName>Part Received</fullName>
            </value>
            <value>
                <fullName>Order Lost</fullName>
            </value>
            <value>
                <fullName>Order Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>