Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/OrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>OrderLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>SupplyLineItems</relationshipLabel>
    <relationshipName>SupplyLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>