Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SupplyLineItems</relationshipLabel>
    <relationshipName>SupplyLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>