Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Product_name__c.field-meta.xml
<CustomField>
    <fullName>Product_name__c</fullName>
    <description>name of the product. In use after project revamp structure</description>
    <label>Product name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>