Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SupplyLineItems</relationshipLabel>
    <relationshipName>SupplyLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>