Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Related_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <label>Related Product Name</label>
    <type>Text</type>
</CustomField>