Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Related_Project_id__c.field-meta.xml
<CustomField>
    <fullName>Related_Project_id__c</fullName>
    <formula>SupplyDetails__r.Project__c</formula>
    <label>Related Project id</label>
    <type>Text</type>
</CustomField>