Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Retail_Project__c.field-meta.xml
<CustomField>
    <fullName>Retail_Project__c</fullName>
    <formula>SupplyDetails__r.Project__r.AP_RetailProject__c</formula>
    <label>Retail Project</label>
    <type>Checkbox</type>
</CustomField>