Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Supply_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Supply_Start_Date__c</fullName>
    <label>Supply Start Date</label>
    <type>Date</type>
</CustomField>