Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Supply_Status__c.field-meta.xml
<CustomField>
    <fullName>Supply_Status__c</fullName>
    <label>Supply Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fully Received</fullName>
            </value>
            <value>
                <fullName>Part Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>