Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/SupplyDetails__c.field-meta.xml
<CustomField>
    <fullName>SupplyDetails__c</fullName>
    <label>Supply</label>
    <referenceTo>Supply__c</referenceTo>
    <relationshipLabel>SupplyLineItems</relationshipLabel>
    <relationshipName>SupplyLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>