Partial_14Dec2021/force-app/main/default/objects/SupplyLineItem__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boxes</fullName>
            </value>
            <value>
                <fullName>Mtrs</fullName>
            </value>
            <value>
                <fullName>No.&apos;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>